add live message system

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -83,6 +83,7 @@ permalink: /selectors
 
 <div class="flex flex-col sm:flex-row m-8 mt-12 pt-8 py-4 min-h-screen border-b-2 border-dashed border-grey-dark overflow-hidden">
   <div class="sm:w-1/2 p-8 overflow-hidden">
+    <h2 class="mb-8">Comments/Attachments examples</h2>
 
     <div class="comment-field">
       <div class="comment-field__action comment-field__attach">
@@ -151,6 +152,7 @@ permalink: /selectors
 
   </div>
   <div class="sm:w-1/2 p-8 overflow-hidden">
+    <h2 class="mb-8">Test comment/att posts</h2>
 
     <div id="comments-container"></div>
 
@@ -573,7 +575,7 @@ permalink: /selectors
 <div class="flex flex-col sm:flex-row m-8 py-4 min-h-screen border-b-2 border-dashed border-grey-dark overflow-hidden">
   <div class="sm:w-1/2 p-8 overflow-hidden">
 
-    <h2>Buttons</h2>
+    <h2 class="mb-8">Buttons</h2>
 
     <!-- Button -->
     <div class="btns">
@@ -592,7 +594,7 @@ permalink: /selectors
   </div>
   <div class="sm:w-1/2 p-8 overflow-hidden">
 
-    <h2>Without popup</h2>
+    <h2 class="mb-8">Without popup</h2>
 
     <!-- Field -->
     <div class="field">
@@ -850,7 +852,7 @@ permalink: /selectors
 <div class="flex flex-col sm:flex-row m-8 py-4 min-h-screen border-b-2 border-dashed border-grey-dark overflow-hidden">
   <div class="sm:w-1/2 p-8 overflow-hidden">
 
-    <h2>Filters</h2>
+    <h2 class="mb-8">Filters</h2>
 
     <!-- Field -->
     <div class="field">
@@ -977,7 +979,7 @@ permalink: /selectors
 <div class="flex flex-col sm:flex-row m-8 py-4 min-h-screen border-b-2 border-dashed border-grey-dark overflow-hidden">
   <div class="sm:w-1/2 p-8 overflow-hidden">
 
-    <h2>Read-only with ellipsis</h2>
+    <h2 class="mb-8">Read-only with ellipsis</h2>
 
     <!-- Field -->
     <div class="field">
@@ -1002,7 +1004,7 @@ permalink: /selectors
   </div>
   <div class="sm:w-1/2 p-8 overflow-hidden">
 
-    <h2>Tag Picker</h2>
+    <h2 class="mb-8">Tag Picker</h2>
 
     <!-- Field -->
     <div class="field">
