update live comment system

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -130,7 +130,7 @@ permalink: /selectors
 
     <div class="comment-post">
       <div class="comment-post__label">
-        <div class="h8"><span class="primary">Jetro Wils</span> at <span>15:16</span></div>
+        <div class="h8"><span class="primary inline-action">Jetro Wils</span> at <span>15:16</span></div>
       </div>
       <div class="comment-post__value">
         <div class="comment-post__bubble">
@@ -303,7 +303,7 @@ permalink: /selectors
           $('#comments-container').prepend(
             '<div class="comment-post">' +
               '<div class="comment-post__label">' +
-                '<div class="h8"><span class="primary">Jetro Wils</span> at <span>' + time + '</span></div>' +
+                '<div class="h8"><span class="primary inline-action">Jetro Wils</span> at <span>' + time + '</span></div>' +
               '</div>' +
               '<div class="comment-post__value">' +
                 '<div class="comment-post__bubble">' +
@@ -322,7 +322,7 @@ permalink: /selectors
           $('#comments-container').prepend(
             '<div class="comment-post">' +
               '<div class="comment-post__label">' +
-                '<div class="h8"><span class="primary">Jetro Wils</span> at <span>' + time + '</span></div>' +
+                '<div class="h8"><span class="primary inline-action">Jetro Wils</span> at <span>' + time + '</span></div>' +
               '</div>' +
               '<div class="comment-post__value">' +
                 '<div class="comment-post__bubble">' +
