--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -138,7 +138,7 @@ permalink: /selectors
             <div class="comment-post__bubble-attachment-thumbnail" style="background-image:url('./assets/images/files.jpg');"></div>
           </a>
           <div class="comment-post__bubble-message">
-            Status Update:
+            <a href="#" class="inline-action">@nickdejaeger</a> Important notes:
             <br><br>
             - Fixing integration tests: 30 tests failing<br>
             - We fixed 3 since yesterday<br>
@@ -149,12 +149,39 @@ permalink: /selectors
       </div>
     </div>
 
+    <div class="comment-post comment-post--self">
+      <div class="comment-post__label">
+        <div class="h8"><span class="primary inline-action">Nick De Jaeger</span> at <span>14:60</span></div>
+      </div>
+      <div class="comment-post__value">
+        <div class="comment-post__bubble">
+          <div class="comment-post__bubble-message">
+            <a href="#" class="inline-action">@jetro</a> Send me screenshot please
+          </div>
+        </div>
+      </div>
+    </div>
 
   </div>
   <div class="sm:w-1/2 p-8 overflow-hidden">
     <h2 class="mb-8">Test comment/att posts</h2>
 
-    <div id="comments-container"></div>
+    <div id="comments-container">
+
+      <div class="comment-post">
+        <div class="comment-post__label">
+          <div class="h8"><span class="primary inline-action">Nick De Jaeger</span> at <span>14:60</span></div>
+        </div>
+        <div class="comment-post__value">
+          <div class="comment-post__bubble">
+            <div class="comment-post__bubble-message">
+              <a href="#" class="inline-action">@jetro</a> Send me screenshot please
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
 
     <div class="comment-field JS_comment_post">
       <div class="comment-field__action comment-field__attach">
@@ -301,7 +328,7 @@ permalink: /selectors
 
         if (hasFile) {
           $('#comments-container').prepend(
-            '<div class="comment-post">' +
+            '<div class="comment-post comment-post--self">' +
               '<div class="comment-post__label">' +
                 '<div class="h8"><span class="primary inline-action">Jetro Wils</span> at <span>' + time + '</span></div>' +
               '</div>' +
@@ -320,7 +347,7 @@ permalink: /selectors
         }
         else {
           $('#comments-container').prepend(
-            '<div class="comment-post">' +
+            '<div class="comment-post comment-post--self">' +
               '<div class="comment-post__label">' +
                 '<div class="h8"><span class="primary inline-action">Jetro Wils</span> at <span>' + time + '</span></div>' +
               '</div>' +
