Selectors: readded tooltip

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -407,7 +407,7 @@ permalink: /selectors
 
     <!-- Field -->
     <div class="field">
-      <div class="field__label">Privacy Policy <div class="inline-action primary animate-fly-in-left"></div></div>
+      <div class="field__label">Privacy Policy <div class="inline-action primary animate-fly-in-left JS_has-popup--tooltip JS_has-popup" data-popid="#ms-privacy"></div></div>
       <div class="field__data">
 
         <div class="field__value">
@@ -538,6 +538,22 @@ permalink: /selectors
       </div>
     </div>
 
+     <!-- Popup -->
+    <div class="multiSelector" id="ms-privacy">
+      <div class="itemBox">
+        <ul class="itemBox__row itemBox__row--custom">
+          <li class="itemBox__cell">
+            <div class="itemBox__cellInner">
+
+              <div class="note note--tooltip">
+                <p>By selecting 'Agree' you have read and accepted TenForce's <a href="#" class="link link--primary">Privacy Policy</a>, concerning your personal data and how it is used.</p>
+              </div>
+
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
 
